fix: table fix for better alignment

--- a/src/app/doc-pages/components/table-doc/table-doc.component.scss
+++ b/src/app/doc-pages/components/table-doc/table-doc.component.scss
@@ -1,7 +1,10 @@
 @import '../../../../../style/elvis/src/utilities/breakpoints.scss';
 
 .overview-example {
-  width: 75%;
+  width: 70%;
+  @include breakpoint-up(MinDesktop) {
+    width: 100%;
+  }
   @include breakpoint-up(Mobile) {
     width: 100%;
   }
