--- a/style/elvis/css/elvis.css
+++ b/style/elvis/css/elvis.css
@@ -4988,29 +4988,50 @@ input:focus {
   transform-origin: left bottom;
 }
 
-.e-table-mobile thead, .e-table thead {
-  background: #262626;
+.e-table-mobile thead, .e-table-mobile.e-table-mobile--compact thead, .e-table thead, .e-table.e-table--compact thead {
+  background: #fff;
   width: 100%;
 }
 
-.e-table-mobile thead th, .e-table thead th {
-  color: #fff;
-  font-weight: 500;
+.e-table-mobile thead th, .e-table-mobile.e-table-mobile--compact thead th, .e-table thead th, .e-table.e-table--compact thead th {
+  color: #000;
+  font-weight: 700;
+}
+
+.e-table-container {
+  width: 100%;
+  overflow: auto;
 }
 
 .e-table {
-  display: block;
+  display: table;
   overflow: auto;
   text-align: left;
-  white-space: nowrap;
   width: 100%;
-  max-width: 768px;
   box-sizing: border-box;
   background: white;
-  border: 1px solid #e9e9e9;
-  border-radius: 8px;
+  white-space: nowrap;
   border-collapse: separate;
   border-spacing: 0;
+  position: relative;
+}
+
+.e-table::before {
+  content: "";
+  border: 1px solid #e9e9e9;
+  border-radius: 8px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+
+.e-table tr:last-child td:first-child {
+  border-bottom-left-radius: 10px;
+}
+
+.e-table tr:last-child td:last-child {
+  border-bottom-right-radius: 10px;
 }
 
 .e-table__sort-header {
@@ -5068,12 +5089,6 @@ input:focus {
   display: flex;
 }
 
-.e-table.e-table--compact thead td,
-.e-table.e-table--compact thead th {
-  color: #fff;
-  font-weight: 500;
-}
-
 .e-table.e-table--compact td,
 .e-table.e-table--compact th {
   font-family: Red Hat Text, sans-serif;
@@ -5084,14 +5099,12 @@ input:focus {
   padding: 9px 16px;
 }
 
-.e-table.e-table--white-header thead th {
-  background: #fff;
-  color: #000;
-  border-bottom: 1px solid #e9e9e9;
+.e-table.e-table--compact th {
+  font-weight: 500;
 }
 
 .e-table.e-table--bold tbody th {
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .e-table--align-center {
@@ -5113,7 +5126,6 @@ input:focus {
   line-height: 28px;
   font-weight: 400;
   color: #000;
-  width: 100%;
   padding: 10px 16px;
 }
 
@@ -5121,11 +5133,23 @@ input:focus {
 .e-table th.e-table__cell--multiline {
   display: inline-block;
   white-space: pre-wrap;
-  width: 300px;
+  width: 450px;
 }
 
 .e-table thead {
   text-align: center;
+}
+
+.e-table thead tr {
+  height: 56px;
+}
+
+.e-table thead th {
+  font-family: Red Hat Display, sans-serif;
+  font-size: 18px;
+  line-height: 22px;
+  font-weight: 700;
+  color: #000;
 }
 
 .e-table thead th:first-child {
@@ -5148,11 +5172,6 @@ input:focus {
   background: white;
 }
 
-.e-table-mobile.e-table-mobile--compact thead td,
-.e-table-mobile.e-table-mobile--compact thead th {
-  color: #fff;
-}
-
 .e-table-mobile.e-table-mobile--compact td,
 .e-table-mobile.e-table-mobile--compact th {
   font-family: Red Hat Text, sans-serif;
@@ -5163,12 +5182,8 @@ input:focus {
   padding: 9px 16px;
 }
 
-.e-table-mobile.e-table-mobile--white-header thead {
-  background-color: #fff;
-}
-
-.e-table-mobile.e-table-mobile--white-header thead th {
-  color: #000;
+.e-table-mobile.e-table-mobile--compact tbody tr:first-of-type th {
+  font-weight: 500;
 }
 
 .e-table-mobile.e-table-mobile--bold tbody th {
@@ -5204,6 +5219,10 @@ input:focus {
 .e-table-mobile th + td:first-of-type,
 .e-table-mobile td:not(:first-of-type) {
   text-align: right;
+}
+
+.e-table-mobile thead tr {
+  height: 56px;
 }
 
 .e-table-mobile tbody tr:first-of-type th {
