--- a/style/elvis/src/components/table.scss
+++ b/style/elvis/src/components/table.scss
@@ -8,29 +8,46 @@ $table-phone-padding: 6px 8px;
 $table-border-radius: 8px;
 
 %header-style {
-  background: colors.color('grey');
+  background: colors.color('white');
   width: 100%;
   th {
-    color: colors.color('white');
-    font-weight: 500;
+    color: colors.color('font-color');
+    font-weight: 700;
   }
 }
 
+.e-table-container {
+  width: 100%;
+  overflow: auto;
+}
 .e-table {
-  display: block;
+  display: table;
   overflow: auto;
   text-align: left;
-  white-space: nowrap;
   width: 100%;
-  max-width: 768px;
   box-sizing: border-box;
   background: white;
+  white-space: nowrap;
 
   // Rounded borders with border-collapsed
-  border: 1px solid colors.color('grey-10');
-  border-radius: $table-border-radius;
   border-collapse: separate;
   border-spacing: 0;
+  position: relative;
+  &::before {
+    content: '';
+    border: 1px solid colors.color('grey-10');
+    border-radius: $table-border-radius;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+  }
+  tr:last-child td:first-child {
+    border-bottom-left-radius: 10px;
+  }
+  tr:last-child td:last-child {
+    border-bottom-right-radius: 10px;
+  }
 
   &__sort-header {
     cursor: pointer;
@@ -80,35 +97,23 @@ $table-border-radius: 8px;
   }
 
   &.e-table--compact {
-    thead {
-      td,
-      th {
-        color: colors.color('white');
-        font-weight: 500;
-      }
-    }
-
     td,
     th {
       @include typography.typography('text-info');
       padding: $table-compact-padding;
     }
-  }
-
-  &.e-table--white-header {
+    th {
+      font-weight: 500;
+    }
     thead {
-      th {
-        background: colors.color('white');
-        color: colors.color('font-color');
-        border-bottom: 1px solid colors.color('grey-10');
-      }
+      @extend %header-style;
     }
   }
 
   &.e-table--bold {
     tbody {
       th {
-        font-weight: bold;
+        font-weight: 500;
       }
     }
   }
@@ -126,18 +131,25 @@ $table-border-radius: 8px;
   td,
   th {
     @include typography.typography('text-description');
-    width: 100%;
+    // width: 100%;
     padding: $table-padding;
     &.e-table__cell--multiline {
       display: inline-block;
       white-space: pre-wrap;
-      width: 300px;
+      width: 450px;
     }
   }
 
   thead {
     @extend %header-style;
+
     text-align: center;
+    tr {
+      height: 56px;
+    }
+    th {
+      @include typography.typography('title-xs');
+    }
 
     th:first-child {
       text-align: left;
@@ -166,27 +178,16 @@ $table-border-radius: 8px;
   background: white;
 
   &.e-table-mobile--compact {
-    thead {
-      td,
-      th {
-        color: colors.color('white');
-      }
-    }
-
     td,
     th {
       @include typography.typography('text-info');
       padding: $table-compact-padding;
     }
-  }
-
-  &.e-table-mobile--white-header {
+    tbody tr:first-of-type th {
+      font-weight: 500;
+    }
     thead {
-      background-color: colors.color('white');
-
-      th {
-        color: colors.color('font-color');
-      }
+      @extend %header-style;
     }
   }
 
@@ -223,6 +224,9 @@ $table-border-radius: 8px;
   }
 
   thead {
+    tr {
+      height: 56px;
+    }
     @extend %header-style;
   }
 
